--- a/app/src/main/res/layout/row_spinner_item.xml
+++ b/app/src/main/res/layout/row_spinner_item.xml
@@ -19,6 +19,7 @@
         android:letterSpacing="0.1"
         android:singleLine="true"
         android:ellipsize="end"
+        android:textColor="@color/black_fade"
         />
 
     <View
