--- a/app/src/main/res/layout/fragment_bulk_books.xml
+++ b/app/src/main/res/layout/fragment_bulk_books.xml
@@ -52,7 +52,8 @@
                 android:textSize="12sp"
                 android:textColor="@color/black"
                 android:textStyle="normal"
-                android:layout_marginTop="6dp"/>
+                android:layout_marginTop="6dp"
+                android:visibility="gone"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -61,7 +62,8 @@
                 android:textSize="12sp"
                 android:textColor="@color/black"
                 android:textStyle="normal"
-                android:layout_marginTop="6dp"/>
+                android:layout_marginTop="6dp"
+                android:visibility="gone"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -70,7 +72,8 @@
                 android:textSize="12sp"
                 android:textColor="@color/black"
                 android:textStyle="normal"
-                android:layout_marginTop="6dp"/>
+                android:layout_marginTop="6dp"
+                android:visibility="gone"/>
 
 
         </LinearLayout>
