--- a/app/src/main/res/layout/near_me_book_row.xml
+++ b/app/src/main/res/layout/near_me_book_row.xml
@@ -47,7 +47,7 @@
                 android:id="@+id/tvBookAuthor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="By D B John"
+                android:text="- D B John"
                 android:textColor="@color/light_black"
                 android:textSize="12sp"
                 android:textStyle="normal"
@@ -66,73 +66,57 @@
                 android:layout_margin="4dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    >
+                    android:orientation="vertical">
 
                     <LinearLayout
+                        android:id="@+id/llRent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:visibility="visible">
 
-                        <LinearLayout
-                            android:id="@+id/llBuy"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Buy at "
-                                android:textSize="12sp"
-                                android:layout_gravity="center"
-                                />
-
-                            <TextView
-                                android:id="@+id/tvBookPrice"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="\u20B9 150"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="13sp"
-                                android:textStyle="normal"
-                                android:layout_gravity="center"
-                                android:maxLines="1"
-                                android:ellipsize="end"
-                                />
-
-                        </LinearLayout>
-
-
-                        <LinearLayout
-                            android:id="@+id/llRent"
+                        <TextView
+                            android:id="@+id/tvBookPrice"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:visibility="visible">
+                            android:text="\u20B91500"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="13sp"
+                            android:textStyle="normal"
+                            android:layout_gravity="center"
+                            android:maxLines="1"
+                            android:ellipsize="end"
+                            />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Rent/day at "
-                                android:textSize="12sp"
-                                android:layout_gravity="center"
-                                />
+                        <TextView
+                            android:id="@+id/tvPriceDiv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" - "
+                            android:textColor="@color/black"
+                            android:textSize="13sp"
+                            android:textStyle="bold"
+                            android:layout_gravity="center"
+                            android:maxLines="1"
+                            android:ellipsize="end"
+                            />
 
-                            <TextView
-                                android:id="@+id/tvBookRentPrice"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="\u20B9 150"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="13sp"
-                                android:textStyle="normal"
-                                android:layout_gravity="center"
-                                android:maxLines="1"
-                                android:ellipsize="end"
-                                />
+                        <TextView
+                            android:id="@+id/tvBookRentPrice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="\u20B9150/day"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="13sp"
+                            android:textStyle="normal"
+                            android:layout_gravity="center"
+                            android:maxLines="1"
+                            android:ellipsize="end"
+                            />
 
-                        </LinearLayout>
                     </LinearLayout>
+
                 </LinearLayout>
 
             </LinearLayout>
@@ -140,15 +124,16 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/llLocation"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="#99000000"
+            android:layout_marginTop="110dp"
             android:visibility="visible"
-            android:background="@drawable/trans_txt_bg"
             android:paddingLeft="8dp"
             android:paddingRight="16dp"
             android:paddingVertical="4dp"
-            android:layout_marginTop="8dp"
-            android:gravity="center">
+            android:gravity="center_vertical">
 
             <ImageView
                 android:id="@+id/iv_pin"
